--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 DerivedData/
 
 ## Various settings
+*.xcodeproj
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,6 +22,7 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+.DS_Store
 
 ## Obj-C/Swift specific
 *.hmap
