--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,9 @@ android {
                 assets.srcDirs += '../../deps/moui/moui/deps/nanovg'
             }
         }
+        ndk {
+            abiFilters 'arm64-v8a', 'x86_64'
+        }
     }
     buildTypes {
         release {
