Adapts to Android Studio 3.5.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,14 +1,15 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/codeStyles
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
-/captures
+.cxx
 .externalNativeBuild
+.gradle
+.idea/caches
+.idea/codeStyles
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/libraries
+*.iml
+build
+captures
+local.properties
